src/test/test-models/bad/matrix_expr_bad5.stan
transformed data {
  matrix[3,2] td_mat32 = [ [ ] ];
}
model {
}
